# Othello

./: .gitignore  Board.c  Board.h  Board.txt  CMakeLists.txt  GUI.c  GUI.h  Pawn.h  Stone.c  Stone.h  makefile
